Add Section 12 — Release Guide with step-by-step future release process